# AiLang

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.ps1  install.sh  stdlib.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: count.py  count2.py  count_all.py  count_comprehensive.py  count_three.py
bench/ailang/: fib.ail  fizzbuzz.ail  greet.ail  sum.ail
bench/ailang_v2/: fizzbuzz.ail  greet.ail  sum.ail
bench/c/: fib.c  fizzbuzz.c  greet.c  sum.c
bench/go/: fizzbuzz.go  greet.go  sum.go
bench/java/: Fib.java  FizzBuzz.java  Greet.java  Sum.java
bench/js/: fib.js  fizzbuzz.js  greet.js  sum.js
bench/python/: fib.py  fizzbuzz.py  greet.py
bench/results/: SUMMARY.md
bench/rust/: fib.rs  fizzbuzz.rs  greet.rs  sum.rs
crates/ailang-codegen-ir/: Cargo.toml
crates/ailang-codegen-llvm/: Cargo.toml
crates/ailang-codegen-llvm/src/: collect.rs  decl.rs  emit.rs  lib.rs  names.rs  prelude.c  prelude_pg.c  prelude_tls.c  typegen.rs  visit.rs
crates/ailang-diag/: Cargo.toml
crates/ailang-driver/: Cargo.toml
crates/ailang-driver/src/: lib.rs
crates/ailang-driver/tests/: e2e.rs
crates/ailang-hir/: Cargo.toml
crates/ailang-lexer/: Cargo.toml
crates/ailang-lexer/src/: lib.rs
crates/ailang-lexer/tests/: snapshots.rs
crates/ailang-lexer/tests/snapshots/: snapshots__ffi.snap  snapshots__fib.snap  snapshots__fizzbuzz.snap  snapshots__hello.snap  snapshots__wc.snap
crates/ailang-parser/: Cargo.toml
crates/ailang-parser/src/: expr.rs  lib.rs  literal.rs
crates/ailang-runtime/: Cargo.toml
crates/ailang-runtime/src/: lib.rs
crates/ailang-sema/: Cargo.toml
crates/ailang-syntax/: Cargo.toml
crates/ailangc/: Cargo.toml
crates/ailangc/src/: main.rs
editors/vscode-ailang/: README.md  language-configuration.json  package.json
examples/: adt_demo.ail  arith_loop.ail  arr_aggregates.ail  arrays.ail  ast_tree.ail  auto_import_demo.ail  bad.ail  bench.ail  bytes_demo.ail  c_header_interop.ail  cinc_demo.ail  closure_block.ail  compiler_test.ail  coverage.ail  empty_agg_arr.ail  ffi.ail  ffi_libc.ail  fib.ail  fizzbuzz.ail  fizzbuzz_simple.ail  generic_user_types.ail  greet.ail  hello.ail  hof_demo.ail  http_concurrent_server.ail  http_format_demo.ail  http_hello_server.ail  http_keepalive_server.ail  http_parse_demo.ail  https_hello_server.ail  if_match_expr.ail  inplace_sort.ail  io_demo.ail  json_demo.ail  map_inference.ail  map_iter_demo.ail  maps.ail  match_pipe.ail  medium_demo.ail  mutual_rec.ail  (+24 more)
examples-selfhost/: args_demo.ail  arith.ail  arrays.ail  builtins.ail  bytes.ail  channel.ail  cinc.ail  classes_inherit.ail  classes_static.ail  classes_virtual.ail  closures.ail  cppinline.ail  cppinterop.ail  csv_roundtrip.ail  encoding_demo.ail  enums.ail  env_demo.ail  etl_pipeline.ail  etl_seq.ail  fib.ail  fizzbuzz.ail  floatmath.ail  floats.ail  fs_demo.ail  gcstress.ail  generic_enums.ail  generics.ail  generics_data.ail  group_by.ail  guards.ail  hof.ail  http_client_demo.ail  http_loopback.ail  imports.ail  interp.ail  json_roundtrip.ail  jwt_demo.ail  lamassign.ail  log_demo.ail  loops.ail  (+35 more)
examples-selfhost/expected/: args_demo.out  arith.out  arrays.out  builtins.out  cinc.out  classes_inherit.out  classes_static.out  classes_virtual.out  closures.out  cppinline.out  csv_roundtrip.out  encoding_demo.out  enums.out  env_demo.out  etl_pipeline.out  etl_seq.out  floatmath.out  floats.out  fs_demo.out  gcstress.out  generic_enums.out  generics.out  generics_data.out  group_by.out  guards.out  hof.out  http_client_demo.out  http_loopback.out  imports.out  interp.out  json_roundtrip.out  jwt_demo.out  lamassign.out  log_demo.out  loops.out  mapiter.out  maplit.out  maps.out  maps_kv.out  mapval.out  (+25 more)
examples-selfhost/lib/: mathlib.ail  nsmod.ail
examples/std/: http.ail  math.ail
mcp/: .gitignore  README.md  index.mjs  package.json
scripts/: package-release.sh
selfhost/: .gitignore  README.md  bar1.sh  bootstrap.sh  lexer.ail  main.ail  parser.ail  verify.sh
selfhost/seed/: README.md  ailc.c
selfhost/src/: ast.ail  codegen.ail  (+4 more)
skill/: SKILL.md
spec/: ablation-plan.md  grammar.ebnf
std/: args.ail  csv.ail  encoding.ail  env.ail  fs.ail  http_client.ail  json.ail  jwt.ail  log.ail  math.ail  mysql.ail  pg.ail  redis.ail  seq.ail  sock.ail  sqlite.ail  str.ail  thread.ail  time.ail  tls.ail  url.ail  uuid.ail  web.ail  ws.ail
study/: README.md  methodology.md
tools/: fetch_module.ail  gen_stdlib_index.ail
tree-sitter-ailang/: README.md  grammar.js  package.json
(+192 files in other folders)
