[package]
name        = "ailang-lexer"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[dependencies]
ailang-syntax = { workspace = true }
logos         = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
