[package]
name        = "ailang-parser"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[dependencies]
ailang-syntax = { workspace = true }
ailang-diag   = { workspace = true }
ailang-lexer  = { workspace = true }

[dev-dependencies]
insta        = { workspace = true }
