[package]
name        = "ailangc"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[[bin]]
name = "ailangc"
path = "src/main.rs"

[dependencies]
ailang-driver = { workspace = true }
clap          = { workspace = true }
